compiler-core/src/luau/tests/snapshots/gleam_core__luau__tests__numbers__negation.snap
---
source: compiler-core/src/luau/tests/numbers.rs
expression: "\npub fn go() {\n  !False\n  -1\n}\n"
---
----- SOURCE CODE

pub fn go() {
  !False
  -1
}


----- COMPILED LUAU
local function go()
  not false
  return -1
end

return {
  go = go
}
