compiler-core/src/luau/tests/snapshots/gleam_core__luau__tests__numbers__string_concat.snap
---
source: compiler-core/src/luau/tests/numbers.rs
expression: "\npub fn go() {\n  \"hello\" <> \" world\"\n}\n"
---
----- SOURCE CODE

pub fn go() {
  "hello" <> " world"
}


----- COMPILED LUAU
local function go()
  return "hello" .. " world"
end

return {
  go = go
}
